--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "mobx": "^6.12.0",
+    "mobx-react-lite": "^4.0.5",
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.1"
