--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "recoil": "^0.7.7",
+    "sharp": "^0.33.2",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
