--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "cookie": "^0.6.0",
     "js-confetti": "^0.12.0",
     "lodash": "^4.17.21",
     "mobx": "^6.12.0",
