--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.5",
     "next": "^14.1.1",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
@@ -29,8 +30,8 @@
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@types/lodash": "^4.14.202",
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "20.16.2",
+    "@types/react": "18.3.4",
     "@types/react-dom": "^18",
     "babel-jest": "^29.7.0",
     "babel-plugin-styled-components": "^2.1.4",
@@ -38,6 +39,6 @@
     "eslint-config-next": "14.0.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "typescript": "^5"
+    "typescript": "5.5.4"
   }
 }
