--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.8",
     "cookie": "^0.6.0",
     "js-confetti": "^0.12.0",
     "lodash": "^4.17.21",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.5",
     "next": "^14.1.1",
-    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
@@ -39,6 +39,7 @@
     "eslint-config-next": "14.0.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "webpack": "^5.94.0"
   }
 }
