--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "solitaire",
+  "name": "v-cell",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,9 +17,9 @@
     "lodash": "^4.17.21",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.5",
-    "next": "^14.2.32",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.0.1",
     "recoil": "^0.7.7",
     "sharp": "^0.33.2",
@@ -31,12 +31,12 @@
     "@testing-library/react": "^14.1.2",
     "@types/lodash": "^4.14.202",
     "@types/node": "20.16.2",
-    "@types/react": "18.3.4",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "babel-jest": "^29.7.0",
     "babel-plugin-styled-components": "^2.1.4",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "typescript": "5.5.4",
