added node version

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,5 +2,8 @@
   command = "npm install --legacy-peer-deps && npm run build"
   publish = ".next"
 
+[build.environment]
+  NODE_VERSION = "20.19.0"
+
 [[plugins]]
   package = "@netlify/plugin-nextjs"
